# alert-analysis-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: .env.n8n.example  hermes-feishu.yaml  hermes-webhook.yaml  kb.env.example
data/: fault-kb.json
deploy/: .env.example  Dockerfile.kb  docker-compose.yml
deploy/grafana/alerts/: default.yml
deploy/grafana/dashboards/: alert-pipeline-sample.json
deploy/n8n/workflows/: alert-pipeline.json
deploy/prometheus/: prometheus.yml
deploy/prometheus/alerts/: minimal.yml
docs/: architecture.md  setup.md
scripts/: export-workflow.sh  init-kb.sh  kb-web-dev.py
src/: kb-server.py  kb.py  kb_tz.py
src/alert_analysis_pipeline/: __init__.py  entrypoints.py
